<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button20"
        android:layout_width="331dp"
        android:layout_height="49dp"
        android:text="@string/button_20_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="331dp"
        android:layout_height="49dp"
        android:text="@string/button_clear_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button50" />

    <Button
        android:id="@+id/button50"
        android:layout_width="331dp"
        android:layout_height="49dp"
        android:text="@string/button_50_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price_label"
        app:layout_constraintEnd_toEndOf="@+id/percentLabel"
        app:layout_constraintTop_toBottomOf="@+id/percentLabel" />

    <TextView
        android:id="@+id/ticketLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticketPrice"
        app:layout_constraintBottom_toBottomOf="@+id/ticketPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ticketPrice" />

    <EditText
        android:id="@+id/ticketPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/priceHint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ticketLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/discount_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketPrice" />

    <TextView
        android:id="@+id/percentDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/percentLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percentLabel"
        app:layout_constraintTop_toTopOf="@+id/percentLabel" />

    <TextView
        android:id="@+id/priceDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/priceLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/priceLabel"
        app:layout_constraintTop_toTopOf="@+id/priceLabel" />

    <Button
        android:id="@+id/button5"
        android:layout_width="331dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_5_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceDisplay" />

    <Button
        android:id="@+id/button10"
        android:layout_width="331dp"
        android:layout_height="49dp"
        android:text="@string/button_10_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button15"
        android:layout_width="331dp"
        android:layout_height="49dp"
        android:text="@string/button_15_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />
</androidx.constraintlayout.widget.ConstraintLayout>